--- a/src/App.css
+++ b/src/App.css
@@ -161,6 +161,7 @@
 .card-content {
   text-transform: uppercase;
   color: #fff;
+  font-family: "Courier New", Courier;
 }
 
 .container .card-container .front .flexbox {
